btn alignment correction

--- a/frontend/src/components/mainBtn/mainBtn.scss
+++ b/frontend/src/components/mainBtn/mainBtn.scss
@@ -16,8 +16,7 @@ button {
         font-weight: 700;
         font-size: 24px;
         line-height: 31px;
-        display: flex;
-        align-items: center;
+        text-align: left;
     }
 }
 
